--- a/InstaSMart/package.json
+++ b/InstaSMart/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "@ngrx/effects": "^15.1.0",
     "@ngrx/store": "^15.1.0",
+    "@popperjs/core": "^2.11.6",
     "angular-in-memory-web-api": "^0.15.0",
+    "bootstrap": "^5.2.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -31,6 +34,7 @@
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
+    "@angular/localize": "^15.0.0",
     "@types/jasmine": "~4.3.0",
     "bootstrap": "^5.3.0-alpha1",
     "font-awesome": "^4.7.0",
