--- a/InstaSMart/tsconfig.spec.json
+++ b/InstaSMart/tsconfig.spec.json
@@ -8,6 +8,11 @@
       "@angular/localize"
     ]
   },
+  "files": [
+    "src/test.ts",
+    
+  ],
+  
   "include": [
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
